# roomkit-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  graph_definition.py  streaming.py  workflow_engine.py
src/roomkit_graph/: __init__.py  _version.py  errors.py  graph.py  handlers.py  orchestration.py  registry.py  triggers.py
src/roomkit_graph/edges/: __init__.py  condition.py  edge.py
src/roomkit_graph/engine/: __init__.py  context.py  executor.py  resolver.py  streaming.py
src/roomkit_graph/nodes/: __init__.py  base.py
tests/: test_condition.py  test_context.py  test_executor.py  test_graph.py  test_integration.py  test_orchestration.py  test_registry.py  test_resolver.py  test_serialization.py  test_smoke.py  test_streaming.py  test_triggers.py
