[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit-graph"
dynamic = ["version"]
description = "Workflow graph engine for RoomKit — multi-step AI workflows with conversation-native execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" }]
keywords = ["workflow", "graph", "roomkit", "ai", "orchestration", "async", "agents"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "roomkit>=0.6",
]

[tool.uv.sources]
roomkit = { path = "../roomkit", editable = true }

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ty>=0.0.26",
    "bandit>=1.7",
    "pre-commit>=3.8",
    "roomkit-graph[httpx]",
]

[project.urls]
Homepage = "https://roomkit.live"
Repository = "https://github.com/roomkit-live/roomkit-graph"
Issues = "https://github.com/roomkit-live/roomkit-graph/issues"

[tool.hatch.version]
path = "src/roomkit_graph/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
"unresolved-import" = "ignore"
"empty-body" = "ignore"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PT", "ASYNC"]
ignore = ["ASYNC109", "ASYNC110"]

[tool.ruff.lint.isort]
known-first-party = ["roomkit_graph"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402", "E501", "N806", "ASYNC210", "ASYNC221", "F841", "SIM102", "SIM105"]
"tests/*.py" = ["N817", "PT011", "PT012", "PT018", "PT019"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]

[tool.coverage.run]
source = ["roomkit_graph"]

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 0
